<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chand.contacts.LoginScreen"
    android:background="#ffffff">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Login"
                android:id="@+id/login_title"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000" />

            <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_title"
                    android:layout_marginTop="10dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                android:textColorHint="#b0b0b0"
                android:textColor="#000000" />



                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:layout_below="@+id/email"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="5dp"
                    android:textColorHint="#b0b0b0"
                    android:textColor="#000000" />


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/password"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/email_sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold"
                    android:textColor="#02a102"
                    android:onClick="user_signup" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:textColor="#02a102"
                    android:onClick="user_login" />

            </TableRow>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
